--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,11 @@ readme = "README.md"
 packages = [{include = "python_app"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<4.0"
 pandas = "^1.5.3"
 numpy = "^1.24.2"
+pytest = "^7.2.2"
+dagger-io = "^0.3.3"
 
 
 [build-system]
