--- a/.github/workflows/4.run-matrixed-pytest-dagger.yml
+++ b/.github/workflows/4.run-matrixed-pytest-dagger.yml
@@ -20,4 +20,7 @@ jobs:
       - name: Install dependencies
         run: poetry install
       - name: Run Dagger using Python SDK
+        # note: uses Github Actions matrix to span testing on Github systems
+        # while retaining Dagger-based capabilities. It is also possible
+        # to run all Dagger tests as-is without a matrix strategy.
         run: poetry run python dagger/run_tests.py ${{ matrix.python-version }}
